...

class FullTimerFormatViewController: UIViewController {
    
    @objc internal func styleSegmentChanged(segmentController: UISegmentedControl) {
        switch segmentController.selectedSegmentIndex {
        case 0:
            label1.text = "First Proposition"
            label2.text = "First Opposition"
            label3.text = "Second Proposition"
            label4.text = "Second Opposition"
            label5.text = "First Opposition"
            label6.text = "First Proposition"
            label7.isHidden = true
            label8.isHidden = true
            
            
...
                globalVars.speakerLabels = ["First Proposition",
                                            "First Opposition",
                                            "Second Proposition",
                                            "Second Opposition",
                                            "First Opposition",
                                            "First Proposition"]
                time1.text = "6:00"
                time2.text = "6:00"
                time3.text = "6:00"
                time4.text = "6:00"
                time5.text = "3:00"
                time6.text = "3:00"
                time7.isHidden = true
                time8.isHidden = true
            } else {
                globalVars.fullDebateTimes = [8, 8, 8, 8, 4, 4]
                globalVars.speakerLabels = ["First Proposition",
                                            "First Opposition",
                                            "Second Proposition",
                                            "Second Opposition",
                                            "First Opposition",
                                            "First Proposition"]
                time1.text = "8:00"
                time2.text = "8:00"
                time3.text = "8:00"
                time4.text = "8:00"
                time5.text = "4:00"
                time6.text = "4:00"
                time7.isHidden = true
                time8.isHidden = true
            }
        case 1:
            label1.text = "Prime Minister"
            label2.text = "Leader of Opposition"
            label3.text = "Deputy Prime Minister"
            label4.text = "Deputy Leader of Opposition"
            label5.text = "Member of Government"
            label6.text = "Member of Opposition"
            label7.text = "Government Whip"
            label8.text = "Opposition Whip"
            label7.isHidden = false
            label8.isHidden = false
            
            globalVars.speakerLabels = ["Prime Minister",
                                        "Leader of Opposition",
                                        "Deputy Prime Minister",
                                        "Deputy Leader of Opp",
                                        "Member of Government",
                                        "Member of Opposition",
                                        "Government Whip",
                                        "Opposition Whip"]
            globalVars.fullDebateTimes = [7, 7, 7, 7, 7, 7, 7, 7]
            time1.text = "7:00"
            time2.text = "7:00"
            time3.text = "7:00"
            time4.text = "7:00"
            time5.text = "7:00"
            time6.text = "7:00"
            time7.text = "7:00"
...
        }
    }
    
    
    let navbar: UINavigationBar = {
        let navbar = UINavigationBar()
        let navbarItem = UINavigationItem(title: "Select Format")
        let button = UIBarButtonItem(title: "Back", style: .plain, target: self, action: #selector(FullTimerFormatViewController.dismissModal))
        navbarItem.leftBarButtonItem = button
        navbar.setItems([navbarItem], animated: false)
        navbar.translatesAutoresizingMaskIntoConstraints = false
        return navbar
    }()
    
    let formatSegmentedControl: UISegmentedControl = {
        let segmentedControl = UISegmentedControl(items: ["CNDF", "British Parliament"])
        segmentedControl.translatesAutoresizingMaskIntoConstraints = false
        segmentedControl.selectedSegmentIndex = 0
        segmentedControl.tintColor = .orange
        segmentedControl.layer.cornerRadius = 10
        segmentedControl.addTarget(self, action: #selector(FullTimerFormatViewController.styleSegmentChanged(segmentController:)), for: .valueChanged)
        return segmentedControl
    }()
    
    let levelSegmentedControl: UISegmentedControl = {
        let segmentedControl = UISegmentedControl(items: ["Junior", "Senior"])
        segmentedControl.translatesAutoresizingMaskIntoConstraints = false
        segmentedControl.tintColor = .orange
        segmentedControl.selectedSegmentIndex = 0
        segmentedControl.layer.cornerRadius = 10
        segmentedControl.addTarget(self, action: #selector(FullTimerFormatViewController.levelSegmentChanged(segmentController:)), for: .valueChanged)
        return segmentedControl
...
        print("code run")
        performSegue(withIdentifier: "toFullDebateTimer", sender: self)
    }
    
    let continueButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Done", for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 18)
        button.setTitleColor(.orange, for: .normal)
        button.layer.cornerRadius = 10
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(self, action: #selector(FullTimerFormatViewController.continueButtonTapped), for: .touchDown)
        return button
...
