...
            timer.invalidate()
            timerLabel.text = "Times Up!"
            globalVars.timesIndex += 1
            globalVars.speakerIndex += 1
            pauseButton.isEnabled = false
            resetButton.isEnabled = true
            resetButton.setTitle("Next", for: .normal)
        } else if seconds == 0 {
            minutes -= 1
            seconds = 59
            timerLabel.text = String(format: "%02i:%02i", minutes, seconds)
        } else {
            seconds = seconds - 1
...
        startButton.isEnabled = false
    }
    @objc func pauseButtonTapped(_ sender: Any) {
        if resumeTapped == false {
            timer.invalidate()
            resumeTapped = true
            pauseButton.setTitle("Resume", for: .normal)
            resetButton.isEnabled = true
            resetButton.setTitle("Reset", for: .normal)
            if globalVars.timesIndex < globalVars.fullDebateTimes.count - 1 {
                altNextButton.isHidden = false
            } else {
                altNextButton.isHidden = true
            }
        } else {
            runTimer()
            resumeTapped = false
            pauseButton.setTitle("Pause", for: .normal)
            resetButton.isEnabled = false
        }
    }
    @objc func stopButtonTapped(_ sender: Any) {
        timer.invalidate()
        timerLabel.textColor = UIColor.white
...
                                    "First Opposition",
                                    "First Proposition"]
    }
    
    let navBar: UINavigationBar = {
        let navBar = UINavigationBar()
        let title = UINavigationItem(title: "Full Debate Timer")
        let button = UIBarButtonItem(title: "Exit", style: .plain, target: self, action: #selector(FullTimerViewController.exitButtonPressed))
        title.rightBarButtonItem = button
        navBar.setItems([title], animated: false)
        navBar.translatesAutoresizingMaskIntoConstraints = false
        return navBar
    }()
    
...
        label.translatesAutoresizingMaskIntoConstraints = false
        return label
    }()
    
    let startButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Start", for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 21)
        button.setTitleColor(.orange, for: .normal)
        button.setTitleColor(.gray, for: .disabled)
        button.layer.cornerRadius = 10
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(self, action: #selector(FullTimerViewController.startButtonTapped(_:)), for: .touchDown)
...
